--- a/index.html
+++ b/index.html
@@ -81,13 +81,13 @@
             <h2 class="titulo-proyectos"><span>×</span> My Projects</h2>
             <div class="articulos">
                 <article class="articulo">
-                    <a href=""><img src="./images/articulo.png" alt=""></a>
+                    <a href=""><img src="./images/project1.png" alt=""></a>
                 </article>
                 <article class="articulo">
-                    <a href=""><img src="./images/articulo.png" alt=""></a>
+                    <a href=""><img src="./images/project2.png" alt=""></a>
                 </article>
                 <article class="articulo">
-                    <a href=""><img src="./images/articulo.png" alt=""></a>
+                    <a href=""><img src="./images/project3.png" alt=""></a>
                 </article>
             </div>
         </div>
