--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <p class="bienvenida">Hello, I'm <span>Manuel</span>!</p>
                 <h2>Backend Developer</h2>
                 <p class="descripcion">Welcome to my personal portfolio </br>Made by <span>HTML, CSS</span> & <span>JS</span></p>
-                <a id="botoncv" href="#cv">Download CV</a>
+                <a id="botoncv" href="./docs/profile.pdf" download>Download CV</a>
             </div>
         </div>
     </section>
@@ -61,7 +61,7 @@
                 <p class="titulo-seccion"><span>×</span> ABOUT ME</p>
                 <h2>My name is <span>Manuel Lecam</span></h2>
                 <h3>I'm 26 years old and I'm from <span>Buenos Aires</span>.</h3>
-                <p>I'm actually studying <span>Ingeniería en Sistemas</span>, at the Universidad Nacional del Noroeste de la Provincia de Buenos Aires. I'm a trainee looking for my <span>first job</span> as Backend Developer.</p>
+                <p>I'm actually studying <span>Ingeniería en Sistemas</span>, at the <a href="http://unnoba.edu.ar">Universidad Nacional del Noroeste de la Provincia de Buenos Aires</a>. I'm a trainee looking for my <span>first job</span> as Backend Developer.</p>
                 </p><p class="titulo-seccion"><span>×</span> LENGUAGES<span> & </span>SKILLS</p>
                 <img id="logoskills" src="./images/htmlogo.png" alt="HTML">
                 <img id="logoskills" src="./images/csslogo.png" alt="CSS">
@@ -69,7 +69,7 @@
                 <img id="logoskills" src="./images/gitlogo.png" alt="Git">
                 <img id="logoskills" src="./images/githublogo.png" alt="GitHub">
                 <br>
-                <a id="botoncv" href="#cv">Download CV</a>
+                <a id="botoncv" href="./docs/profile.pdf" download>Download CV</a>
             </div>
         </div>
         
