--- a/index.html
+++ b/index.html
@@ -121,9 +121,9 @@
                 <h2><span>×</span> LET A MESSAGE</h2>
                 <div id="formulary">
                     <form action="#" method="post">
-                        <input type="text" id="name" name="name" placeholder="Name" required>
-                        <input type="email" id="email" name="email" placeholder="e-mail" required>
-                        <textarea id="message" name="message" rows="5" placeholder="Message" required></textarea>
+                        <input type="text" id="name" name="name" placeholder="NAME" required>
+                        <input type="email" id="email" name="email" placeholder="E-MAIL" required>
+                        <textarea id="message" name="message" rows="5" placeholder="MESSAGE" required></textarea>
                         <button type="submit">Send</button>
                     </form>
                 </div>
