--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
                     <h1><a href="index.html">mlecam™</a></h1>
                     <nav id="nav">
                         <ul id="links">
-                            <li><a href="#inicio" class="seleccionado">HOME</a></li>
-                            <li><a href="#colorsobremi">ABOUT ME</a></li>
-                            <li><a href="#proyectos">PROJECTS</a></li>
-                            <li><a href="#contacto">CONTACT</a></li>
+                            <li><a href="#inicio" class="seleccionado" onclick="seleccionar(this)">HOME</a></li>
+                            <li><a href="#colorsobremi" onclick="seleccionar(this)">ABOUT ME</a></li>
+                            <li><a href="#proyectos" onclick="seleccionar(this)">PROJECTS</a></li>
+                            <li><a href="#contacto" onclick="seleccionar(this)">CONTACT</a></li>
                         </ul>
                     </nav>
 
@@ -61,7 +61,7 @@
                 <p class="titulo-seccion"><span>×</span> ABOUT ME</p>
                 <h2>My name is <span>Manuel Lecam</span></h2>
                 <h3>I'm 26 years old and I'm from <span>Buenos Aires</span>.</h3>
-                <p>I'm actually studying <span>Ingeniería en Sistemas</span>, at the <a href="http://unnoba.edu.ar">Universidad Nacional del Noroeste de la Provincia de Buenos Aires</a>. I'm a trainee looking for my <span>first job</span> as Backend Developer.</p>
+                <p>I'm actually studying <span>Ingeniería en Sistemas</span>, at the <a href="http://unnoba.edu.ar">Universidad Nacional del Noroeste de la Provincia de Buenos Aires</a>. I'm a trainee looking for my first job as Backend Developer.</p>
                 </p><p class="titulo-seccion"><span>×</span> LENGUAGES<span> & </span>SKILLS</p>
                 <img id="logoskills" src="./images/htmlogo.png" alt="HTML">
                 <img id="logoskills" src="./images/csslogo.png" alt="CSS">
