QUITAR SOY DE BUENOS AIRES

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <div class="sobremi">
                 <p class="titulo-seccion"><span>×</span> ABOUT ME</p>
                 <h2>My name is <span>Manuel Lecam</span></h2>
-                <h3>I'm 26 years old and I'm from <span>Buenos Aires</span>.</h3>
+                <!-- <h3>I'm 26 years old and I'm from <span>Buenos Aires</span>.</h3> -->
                 <p>I'm actually studying <span>Ingeniería en Sistemas</span>, at the <a href="http://unnoba.edu.ar">Universidad Nacional del Noroeste de la Provincia de Buenos Aires</a>. I'm a trainee looking for my first job as Backend Developer.</p>
                 </p><p class="titulo-seccion"><span>×</span> LENGUAGES<span> & </span>SKILLS</p>
                 <img id="logoskills" src="./images/htmlogo.png" alt="HTML">
