Arreglo de sobremÃi

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <img id="logoskills" src="./images/gitlogo.png" alt="Git">
                 <img id="logoskills" src="./images/githublogo.png" alt="GitHub">
                 <br>
-                <a id="botoncv" href="./docs/profile.pdf" download>Download CV</a>
+                <a id="botoncvcontacto" href="./docs/profile.pdf" download>Download CV</a>
             </div>
         </div>
         
@@ -95,7 +95,7 @@
 
     <!-- Sección de Contacto -->
     <section id="contacto">
-        <h1><span>×</span> Contact Me</h1>
+        <h1><span>×</span> CONTACT ME</h1>
         <div id="contacto-container">
             <div id="contact-info">
                 <h2><span>×</span> CONTACT INFO</h2>
